@@ -7,6 +7,7 @@ and this project adheres to [Semantic Versioning](http://semver.org/spec/v2.0.0.
 ## [2.2.9-preview.3] - 2019-01-00
 ### Mostly Bugfixes
 - Added CinemachineCore.GetBlendOverride delegate to allow applications to override any vcam blend when it happens
+- When a blend is cancelled by the opposite blend, reduce the blend time
 - FreeLook: if inherit position from similar FreeLooks, bypass damping 
 - Timeline: improve handling when vcam values are tweaked inside shot inspector (fogbugz 1109024)
 - OnTargetObjectWarped no longer generates garbage
