@@ -1,6 +1,7 @@
 <size=20><b>Version 2.2.9-preview.2</b></size>
 
 - Added CinemachineCore.GetBlendOverride delegate to allow applications to override any vcam blend when it happens
+- When a blend is cancelled by the opposite blend, reduce the blend time
 - FreeLook: if inherit position from similar FreeLooks, bypass damping
 - Timline: improve handling when vcam values are tweaked inside shot inspector (fogbugz 1109024)
 - OnTargetObjectWarped no longer generates garbage
